--- a/index.html
+++ b/index.html
@@ -39,6 +39,10 @@
 				<h4>Systems</h4>
 				<ul class="systems">
 					
+					<li>
+						Megaphone-SMS <span class="status operational">operational</span>
+					</li>
+					
 				</ul>
 
 				<h4>Incidents</h4>
