--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 				<section class="container">
 
 					<a class="navigation-title" href="">
-						<img class="img" src="https://raw.githubusercontent.com/jayfk/statuspage/master/template/logo.png" height="30">
+						<img class="img" src="logo.png" height="30">
 						<h1 class="title">Victory NCC</h1>
 					</a>
 
